<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_back"
                android:background="@drawable/style_press_game"
                android:textSize="24sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/black95"
                android:onClick="slotBack"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/bt_anew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_anew"
                android:background="@drawable/style_press_game"
                android:textSize="24sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/black95"
                android:onClick="slotAnew"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tw_who_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_step"
                android:background="@drawable/style_tw_game"
                android:gravity="center"
                android:textSize="24dp"
                android:layout_weight="1"
                android:textColor="@color/red_game"
                android:textStyle="bold"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/fond">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_c0_r0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cross" />

                <ImageView
                    android:id="@+id/iv_c1_r0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cross" />

                <ImageView
                    android:id="@+id/iv_c2_r0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cross" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_c0_r1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cross" />

                <ImageView
                    android:id="@+id/iv_c1_r1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cross" />

                <ImageView
                    android:id="@+id/iv_c2_r1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cross" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_c0_r2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cross" />

                <ImageView
                    android:id="@+id/iv_c1_r2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cross" />

                <ImageView
                    android:id="@+id/iv_c2_r2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cross" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</RelativeLayout>